--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
   <head>
     <title>Mi_Portafolio </title>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="whidth=device-width, initial-scale=1.0">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="css/animate.css" rel="stylesheet" media="screen">
+    <link link href="css/ihover.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles/main.css">
     <link href="css/main.css" rel="stylesheet" media="screen">
   </head>
   <body id="page-top" class="index">
@@ -20,53 +23,91 @@
             <li class="hidden"><a href="#page-top"></a></li>
             <li class="page-scroll"><a href="#portfolio">Portfolio</a></li>
             <li class="page-scroll"><a href="#about">Sobre mi</a></li>
-            <li class="page-scroll"><a href="#contact">Conocimiento</a></li>
+            <li class="page-scroll"><a href="#conocimiento">Conocimiento</a></li>
           </ul>
         </div>
       </div>
     </nav>
-    <header>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 headerP opacity">
-            <div class="intro-text"><span class="animated shake name">Hola, mi nombre es Rita, me gusta el diseño y desarrollo de páginas web, te invito a ver parte de lo que aprendi.</span></div><a href="#about" class="btn btn-circle page-scroll pulse"><i class="fa fa-angle-double-down"></i></a>
-          </div>
+    <div id="myCarousel" data-ride="carousel" class="carousel slide hidden-xs">
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+      <div role="listbox" class="carousel-inner">
+        <div class="item active">
+          <div class="slide slide1 img"></div>
         </div>
-      </div>
-    </header>
+        <div class="item">
+          <div class="slide slide2 img"></div>
+        </div>
+        <div class="item">
+          <div class="slide slide3 img"></div>
+        </div>
+      </div><a href="#myCarousel" role="button" data-slide="prev" class="left carousel-control"><span aria-hidden="true" class="glyphicon glyphicon-chevron-left"></span><span class="sr-only">Previous</span></a><a href="#myCarousel" role="button" data-slide="next" class="right carousel-control"><span aria-hidden="true" class="glyphicon glyphicon-chevron-right"></span><span class="sr-only">Next</span></a>
+    </div>
+    <div class="base">
+      <div class="intro-text"><a href="#portfolio" class="btn btn-circle page-scroll pulse"><i class="fa fa-angle-double-down"></i></a></div>
+    </div>
     <section id="portfolio" class="portafolio">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12 text-center">
+          <div class="col-xlg-12 text-center">
             <h2>Portfolio</h2>
             <hr class="star-primary">
           </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-4 portfolio-item"><a href="#portfolioModal1" data-toggle="modal" class="portfolio-link">
-              <div class="caption">
-                <div class="caption-content"><i class="fa fa-search-plus fa-3x"></i></div>
-              </div><img src="images/loveBlog.jpg" alt="" class="animated wobble img-responsive img-circle"></a></div>
-          <div class="col-sm-4 portfolio-item"><a href="#portfolioModal2" data-toggle="modal" class="portfolio-link">
-              <div class="caption">
-                <div class="caption-content"><i class="fa fa-search-plus fa-3x"></i></div>
-              </div><img src="images/loveBlog.jpg" alt="" class="img-responsive img-circle"></a></div>
-          <div class="col-sm-4 portfolio-item"><a href="#portfolioModal3" data-toggle="modal" class="portfolio-link">
-              <div class="caption">
-                <div class="caption-content"><i class="fa fa-search-plus fa-3x"></i></div>
-              </div><img src="images/loveBlog.jpg" alt="" class="img-responsive img-circle"></a></div>
-          <div class="col-sm-4 portfolio-item"><a href="#portfolioModal4" data-toggle="modal" class="portfolio-link">
-              <div class="caption">
-                <div class="caption-content"><i class="fa fa-search-plus fa-3x"></i></div>
-              </div><img src="images/loveBlog.jpg" alt="" class="img-responsive img-circle"></a></div>
-          <div class="col-sm-4 portfolio-item"><a href="#portfolioModal5" data-toggle="modal" class="portfolio-link">
-              <div class="caption">
-                <div class="caption-content"><i class="fa fa-search-plus fa-3x"></i></div>
-              </div><img src="images/loveBlog.jpg" alt="" class="img-responsive img-circle"></a></div>
-          <div class="col-sm-4 portfolio-item"><a href="#portfolioModal6" data-toggle="modal" class="portfolio-link">
-              <div class="caption">
-                <div class="caption-content"><i class="fa fa-search-plus fa-3x"></i></div>
-              </div><img src="images/loveBlog.jpg" alt="" class="img-responsive img-circle"></a></div>
+          <div class="row caja">
+            <div class="col-sm-4">
+              <div class="ih-item circle effect2 left_to_right"><a href="#">
+                  <div class="img"><img src="images/loveBlog.png" alt="img-circle"></div>
+                  <div class="info">
+                    <h3>LoveBlog</h3>
+                    <p>animacion carrusel</p>
+                  </div></a></div>
+            </div>
+            <div class="col-sm-4">
+              <div class="ih-item circle effect2 left_to_right"><a href="#">
+                  <div class="img"><img src="images/Flatheme.png" alt="img-circle"></div>
+                  <div class="info">
+                    <h3>Flat theme</h3>
+                    <p>animacion</p>
+                  </div></a></div>
+            </div>
+            <div class="col-sm-4">
+              <div class="ih-item circle effect2 left_to_right"><a href="#">
+                  <div class="img"><img src="images/panecolores.png" alt="img-circle"></div>
+                  <div class="info">
+                    <h3>Panel Colores</h3>
+                    <p>Uso de sass</p>
+                  </div></a></div>
+            </div>
+          </div>
+          <div class="row caja">
+            <div class="col-sm-4">
+              <div class="ih-item circle effect2 left_to_right"><a href="#">
+                  <div class="img"><img src="images/portafolioGrupo.png" alt="img-circle"></div>
+                  <div class="info">
+                    <h3>Portafolio Grupal</h3>
+                    <p>Proyecto colaborativo</p>
+                  </div></a></div>
+            </div>
+            <div class="col-sm-4">
+              <div class="ih-item circle effect2 left_to_right"><a href="#">
+                  <div class="img"><img src="images/smashFace.png" alt="img-circle"></div>
+                  <div class="info">
+                    <h3>Smash Face</h3>
+                    <p>Juego realizado en JS</p>
+                  </div></a></div>
+            </div>
+            <div class="col-sm-4">
+              <div class="ih-item circle effect2 left_to_right"><a href="#">
+                  <div class="img"><img src="images/relojDigital.png" alt="img-circle"></div>
+                  <div class="info">
+                    <h3>Reloj Digital</h3>
+                    <p>Desarrollado con JQuery</p>
+                  </div></a></div>
+            </div><a href="#about" class="btn btn-circle page-scroll pulse"><i class="fa fa-angle-double-down"></i></a>
+          </div>
         </div>
       </div>
     </section>
@@ -75,11 +116,68 @@
         <h2>Sobre mi</h2>
         <hr class="star-light">
         <div class="row">
-          <div class="comentario col-sm-5">
-          </div>
+          <div class="comentario col-sm-5"><img src="images/sentada.jpg" alt="" class="img-responsive img-circle"></div>
           <div class="comentario col-sm-7">
-            <p></p>Soy de aquellas personas que disfruta del lenguaje de programación, por ello mi meta es convertirme en ingeniera de software. Tengo experiencia  trabajando en equipo para el desarrollo de proyecto.
-            <p></p>Cuando no programo, me dedico a armar rompecabezas, a dibujar y disfrutar de la lectura de un buen libro.
+            <p></p>Estudio ingeniería de software y desarrollo de páginas web, tengo un firme propósito de seguir aprendiendo sobre los diferentes lenguajes de programación y construir una carrera en el área de programación y mantenimiento de software.
+            <p></p>Cuento con 10 años de experiencia como docente en matemática e informática, los cuales me han permitido desarrollar un gran sentido de responsabilidad, así como habilidades de manejo de grupo y liderazgo de proyectos educativos.
+            <p></p>Soy de aquellas personas que disfruta del lenguaje de programación, cuando no programo, me dedico a armar rompecabezas, a dibujar y disfrutar de la lectura de un buen libro.
+          </div>
+        </div>
+      </div>
+    </section>
+    <div class="conocimiento">
+      <section class="intro">
+        <h1>CONOCE LO QUE APRENDI EN LABORATORIA ↓</h1><a href="#conocimiento" class="btn btn-circle page-scroll pulse"><i class="fa fa-angle-double-down"></i></a>
+      </section>
+      <section id="conocimiento" class="timeline">
+        <ul>
+          <li>
+            <div>
+              <time> </time> HTML
+            </div>
+          </li>
+          <li>
+            <div>
+              <time> </time> CSS
+            </div>
+          </li>
+          <li>
+            <div>
+              <time> </time> SASS
+            </div>
+          </li>
+          <li>
+            <div>
+              <time> </time> JADE
+            </div>
+          </li>
+          <li>
+            <div>
+              <time> </time> JAVASCRIPT
+            </div>
+          </li>
+          <li>
+            <div>
+              <time> </time> JQUERY
+            </div>
+          </li>
+          <li>
+            <div>
+              <time> </time> GITHUB
+            </div>
+          </li>
+        </ul>
+      </section>
+    </div>
+    <section class="seccion get text-center"></section>
+    <section class="secion paisaje">
+      <div id="divider">
+        <div class="divider-bg"></div>
+        <div class="container">
+          <div class="row">
+            <div class="col-12-lg social-media">
+              <div class="social-icons"><a href="" class="social-media facebook"><i class="fa fa-facebook-square fa-8x"></i></a><a href="" class="social-media white twitter"><i class="fa fa-twitter-square fa-8x"></i></a><a href="" class="social-media white linkedin"><i class="fa fa-linkedin-square fa-8x"></i></a><a href="" class="social-media white pinterest"><i class="fa fa-pinterest-square fa-8x"></i></a><a href="" class="social-media white google"><i class="fa fa-google-plus-square fa-8x"></i></a><a href="" class="social-media white tumblr"><i class="fa fa-tumblr-square fa-8x"></i></a><a href="" class="social-media white instagram"><i class="fa fa-instagram fa-8x"></i></a></div>
+            </div>
           </div>
         </div>
       </div>
@@ -111,7 +209,9 @@
         </div>
       </div>
     </footer>
+    <script src="js/lineaTiempo.js"></script>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/creative.js"></script>
   </body>
 </html>
